log
Wed, May 14, 2025  8:56:15 AM: 
 sudoku.c | 26 +++++++++++++++++++++-----
 1 file changed, 21 insertions(+), 5 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:67:14: error: 'lista' undeclared (first use in this function)
     pushBack(lista, copia) ;
              ^~~~~
sudoku.c:67:14: note: each undeclared identifier is reported only once for each function it appears in
3f0e54c
Wed, May 14, 2025  8:56:33 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
ba7d6ff
Wed, May 14, 2025  9:22:52 AM: 
 sudoku.c | 33 ++++++++++++++++++++++++++++++++-
 1 file changed, 32 insertions(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
6fe99ed
Wed, May 14, 2025  9:28:51 AM: 
 sudoku.c | 11 ++++++++---
 1 file changed, 8 insertions(+), 3 deletions(-)
 tests:  6|2
total_score: 45/70
75351e7
Wed, May 14, 2025  9:31:49 AM: 
 sudoku.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  7|1
total_score: 55/70
1882642
Fri, May 16, 2025  7:05:52 PM: 
 sudoku.c | 38 ++++++++++++++++++++++++++++++--------
 1 file changed, 30 insertions(+), 8 deletions(-)
 tests:  7|1
total_score: 55/70
92b911e
Fri, May 16, 2025  7:13:30 PM: 
 sudoku.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  10|0
total_score: 70/70
bbe446d
Fri, May 16, 2025  7:20:54 PM: 
 sudoku.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
Compilation failed
test.c:245:5: error: redefinition of 'main'
 int main( int argc, char *argv[] ) {
     ^~~~
In file included from test.c:5:0:
sudoku.c:143:5: note: previous definition of 'main' was here
 int main( int argc, char *argv[] ){
     ^~~~
8eb2eca
Fri, May 16, 2025  7:21:19 PM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  10|0
total_score: 70/70
6d5a9d0
Fri, May 16, 2025  7:25:22 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|0
total_score: 70/70
ffacce9
